fixed alignment and some bugs in carousel

--- a/pages/case-studies/study.module.css
+++ b/pages/case-studies/study.module.css
@@ -42,6 +42,7 @@
 
 .logoContainer {
   position: relative;
+  width: 11vw;
 }
 
 .logoHeading {
